ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dolly-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dolly-service
            port:
              number: 80
